# SDL-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: DebugStatements.h  PrintDebug.h  SDLEngine.h
include/Application/: Application.h  ScreenSettings.h
include/Assets/Components/: Collider2D.h  ParticleEmitter.h  Renderer2D.h  Transform.h  UITexture.h
include/Components/: AABB.h  AABB2D.h  BoxCollider2D.h  CircleCollider2D.h  ParticleEmitter.h  PolygonCollider2D.h  Renderer2D.h  Rigidbody2D.h  Transform.h  UITexture.h
include/Core/: AssetPathHolder.h  Editor.h  EngineMain.h  GameScene.h  HelperFunctions.h  MathHelpers.h  ScreenHelperFunctions.h
include/Core/CoreSystems/: CoreSystem.h  CoreSystemsHolder.h  InputSystem.h  ResourceManager.h
include/Core/CoreSystems/EventSystem/: EventData.h  EventPayloadData.h  EventSystem.h
include/Core/DataStructures/: AABBQuadTree.h
include/Core/Debug/: DebugDrawHelpers.h  TracyMalloc.h
include/Core/ECS/: ComponentFactory.h  ECSData.h  ECSManager.h
include/Core/ECS/Components/: ComponentFactory.h
include/Core/ECS/SparseSet/: ISparseSet.h  SparseSet.h
include/Core/ECS/Systems/: DebugDrawSystem.h  DebugEditorSystem.h  ParticleSystem.h  PhysicsSystem.h  RenderingSystem.h  System.h  TransformSolverSystem.h
include/Core/ECS/Systems/Debug/: DebugDrawHelpers.h  DebugDrawSystem.h
include/Core/ECS/Systems/Physics/: BroadPhase.h  CollisionChecks.h  CollisionData.h  CollisionManifold.h  CollisionPair.h  NaiveBroadPhase.h  NarrowPhase.h  PhysicsSystem.h  Solver.h
include/Core/Physics/: AABBTreeBroadPhase.h  BroadPhase.h  CollisionHelperFunctions.h  CollisionPair.h  ContactManifold.h  ContactPointFunctions.h  ContactPoints.h  NaiveBroadPhase.h  NarrowPhase.h  ShapeClippingFunctions.h  ShapeOverlapFunctions.h  Solver.h
include/Scene/: GameObject.h  SceneManager.h
src/Application/: Application.cpp
src/Core/: Editor.cpp  GameScene.cpp
src/Core/CoreSystems/: InputSystem.cpp  ResourceManager.cpp
src/Core/DataStructures/: AABBQuadTree.cpp
src/Core/ECS/: ECSManager.cpp
src/Core/ECS/Systems/: DebugDrawSystem.cpp  DebugEditorSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  RenderingSystem.cpp  TransformSolverSystem.cpp
src/Core/ECS/Systems/Debug/: DebugDrawSystem.cpp
src/Core/ECS/Systems/Physics/: NaiveBroadPhase.cpp  NarrowPhase.cpp  PhysicsSystem.cpp  Solver.cpp
src/Core/Physics/: AABBTreeBroadPhase.cpp  NaiveBroadPhase.cpp  NarrowPhase.cpp  Solver.cpp
src/Scene/: GameObject.cpp  SceneManager.cpp
src/Scene/Camera/: Camera.cpp
